--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 wit-component = "0.11.0" # { git = "https://github.com/bytecodealliance/wasm-tools"}
+toml = "0.7.4"
