--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,15 @@ async-trait = "0.1.68"
 
 # [patch.crates-io]
 # wasmtime = { git = 'https://github.com/bytecodealliance/wasmtime' } # v11 is not yet published
+
+[profile.release]
+opt-level = "z"          # Optimize for size.
+lto = true               # Enable Link Time Optimization
+codegen-units = 1        # allow for maximum size reduction optimizations
+strip = true             # Automatically strip symbols from the binary.
+panic = 'abort'          # Abort on panic
+debug = false
+debug-assertions = false
+overflow-checks = false
+incremental = false
+rpath = false
