--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
-name = "xtask"
+name = "wit-wasm-xtask"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "xtask-runner"
+path = "src/bin/runner.rs"
+
+[lib]
+crate-type = ["lib"]
 
 [dependencies]
 # // * [????-??-??] 0xa - original version
